<resources>
    <string name="app_name">QRHunter</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="profile_title">Profile</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="username">User Name:</string>
    <string name="full_name">Full Name:</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="example_user_name">JDoe101</string>
    <string name="example_name">John Doe</string>
    <string name="example_email">jdoe@ualberta.ca</string>
    <string name="example_phone">403 555 6666</string>
    <string name="contact_info_title">Contact Information</string>
    <string name="title_activity_profile_fragment">ProfileFragment</string>
    <string name="login_prompt_1">Hi,</string>
    <string name="login_prompt_2">Welcome to</string>
    <string name="login_prompt_3">QRHunter</string>
    <string name="login_user_name_hint">Enter Username</string>
    <string name="login_name_hint">Enter Full Name</string>
    <string name="login_email_hint">Enter Email</string>
    <string name="login_phone_hint">Enter Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_player">Search Player</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_api_key">AIzaSyAZRI5eXdHQSBxa7OSYLqOP0ZbWh8zuBtk</string>
</resources>