<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Profile_Edit_Fragment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".fragments.EditProfileFragment"
    android:background="@drawable/gradient_background">
    <TextView
        android:text="@string/profile_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">
    </TextView>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </Space>
    <TextView
        android:text="@string/username"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">
    </TextView>
    <TextView
        android:id="@+id/user_name_edit"
        android:textSize="25sp"
        android:hint="John Doe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">
    </TextView>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </Space>
    <TextView
        android:text="@string/full_name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">
    </TextView>
    <EditText
        android:id="@+id/full_name_edit"
        android:inputType="textPersonName"
        android:hint="@string/example_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">
    </EditText>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </Space>
    <TextView
        android:text="@string/email"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">
    </TextView>
    <EditText
        android:id="@+id/email_edit"
        android:inputType="textWebEmailAddress"
        android:autofillHints="emailAddress"
        android:hint="@string/example_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">
    </EditText>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </Space>
    <TextView
        android:text="@string/phone"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">
    </TextView>

    <EditText
        android:id="@+id/phone_edit"
        android:inputType="phone"
        android:hint="@string/example_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">
    </EditText>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </Space>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/save_button"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/cancel_button"
            android:backgroundTint="#EB3F3F"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            style="android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/cancel_button"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/save_button"
            android:backgroundTint="#99C2FF"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            style="android:attr/buttonBarButtonStyle">
        </Button>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </Space>

</LinearLayout>