<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment"
    android:orientation="vertical"
    android:background="@drawable/gradient_background">
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:text="@string/login_prompt_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/rajdhani_bold"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"/>
    <TextView
        android:text="@string/login_prompt_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:fontFamily="@font/rajdhani_bold"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"/>
    <TextView
        android:text="@string/login_prompt_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rajdhani_bold"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingBottom="20dp"/>
    <EditText
        android:id="@+id/user_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/rajdhani_semibold"
        android:layout_marginRight="20dp"
        android:paddingBottom="10dp"
        android:hint="@string/login_user_name_hint"/>
    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="10dp"
        android:inputType="textPersonName"
        android:fontFamily="@font/rajdhani_semibold"
        android:hint="@string/login_name_hint"/>
    <EditText
        android:id="@+id/email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rajdhani_semibold"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="10dp"
        android:inputType="textWebEmailAddress"
        android:hint="@string/login_email_hint"/>
    <EditText
        android:id="@+id/phone_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rajdhani_semibold"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:inputType="phone"
        android:hint="@string/login_phone_hint"/>
    <Button
        android:id="@+id/sign_up_button"
        android:text="Sign Up"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/rajdhani_semibold"
        android:textColor="@color/black"
        android:backgroundTint="#EC3561"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>